# ga-nets

./: LICENSE  README.md  pyproject.toml
ga_nets/: __init__.py  activations.py  aggregations.py  connection.py  custom_types.py  errors.py  indexer.py  layer.py  network.py  neuron.py  utils.py
ga_nets/nets/: __init__.py  ffw.py  rnn.py
